# visarm

./: .gitignore  .gitmodules  LICENSE  README.md  environment.yml  notes.md
client/: client_code.ino
client/client_code/: client_code.ino
examples/servo_calib/: servo_calib.ino
examples/servo_sweep_all/: servo_sweep_all.ino
examples/servo_test/: servo_test.ino
examples/sweep_all/: sweep_all.ino
server/: CMakeLists.txt  arm_visualizer.py  classes.txt  kinematics.py  main.py  server_.py  test.py  visual.py
server/calibration/: calibrate.cpp
server/camera/: README.md  detection.py
server/kinematics/: mainVisarm.cpp  visarm.cpp  visarm.h
server/output/: custom_camera.xml  pose_1.yaml  pose_2.yaml  pose_3.yaml  pose_4.yaml  pose_5.yaml  pose_6.yaml  pose_9.yaml  pose_cPo_1.yaml  pose_cPo_10.yaml  pose_cPo_11.yaml  pose_cPo_12.yaml  pose_cPo_13.yaml  pose_cPo_14.yaml  pose_cPo_2.yaml  pose_cPo_3.yaml  pose_cPo_4.yaml  pose_cPo_5.yaml  pose_cPo_6.yaml  pose_cPo_7.yaml  pose_cPo_8.yaml  pose_cPo_9.yaml  pose_rPe1.yaml  pose_rPe10.yaml  pose_rPe11.yaml  pose_rPe12.yaml  pose_rPe13.yaml  pose_rPe14.yaml  pose_rPe2.yaml  pose_rPe3.yaml  pose_rPe4.yaml  pose_rPe5.yaml  pose_rPe6.yaml  pose_rPe7.yaml  pose_rPe8.yaml  pose_rPe9.yaml
server/visuals/: arm_visualizer.py  visual.py  visualServoing.py
